rest-frontend: add link to tutorials in getting started sections

--- a/src/tools/rest-frontend/resources/structure.json.in
+++ b/src/tools/rest-frontend/resources/structure.json.in
@@ -29,6 +29,13 @@
 						"options": {
 							"path": "doc/INSTALL.md"
 						}
+					},
+					{
+						"name": "Tutorials",
+						"type": "staticref",
+						"options": {
+							"path": "tutorials"
+						}
 					}
 				]
 			},
@@ -137,6 +144,13 @@
 						"type": "staticfile",
 						"options": {
 							"path": "doc/VERSION.md"
+						}
+					},
+					{
+						"name": "Tutorials",
+						"type": "staticref",
+						"options": {
+							"path": "tutorials"
 						}
 					}
 				]
