rest-backend: benchmarks and improvements
- added benchmarks for the solution based on Elektra and a comparison in MySQL
  - added a small README for the benchmarks
  - added a cmake Find module for the MySQL C++ Connector
- improved service class functions regarding performance (drastically)
  - storage class keeps one global KDB object instead of re-opening it all the time, which improves speed of inserts a lot
  - building cache does now iterate and compare a lot less than before (especially regex checks)

--- a/src/tools/rest-backend/CMakeLists.txt
+++ b/src/tools/rest-backend/CMakeLists.txt
@@ -50,7 +50,9 @@ else ()
     generate_manpage (kdb-${tool} FILENAME ${CMAKE_CURRENT_SOURCE_DIR}/README.md)
     
     if (ENABLE_TESTING)
-	    add_subdirectory (tests)
+        add_subdirectory (tests)
     endif (ENABLE_TESTING)
+
+    add_subdirectory (benchmarks)
 
 endif ()
