doc: contract update implemented/proposed
see #1016

--- a/doc/CONTRACT.ini
+++ b/doc/CONTRACT.ini
@@ -235,14 +235,14 @@ description = Lists the requirements of the plugin.
 
 [infos/recommends]
 type = string
-status = proposal
+status = implemented
 usedby = plugin spec
 description = Recommendations are similar to needs, but the backend
   also validates if they are not included.
 
 [info/metadata]
 type = null
-status = proposed
+status = implemented
 usedby = spec
 example = check/validation check/validation/message
 description = a space separated list of metanames a plugin will take care of.
@@ -308,7 +308,7 @@ type = vector<int enum>
   {"orphan",       -4000}, ; author does not respond and also otherwise not much knowledge about plugin is present
   {"obsolete",     -4000}, ; another plugin fulfils a similar functionality in a better way
   {"discouraged", -32000}, ; only use the plugin if you really know what you are doing
-status = proposed
+status = implemented
 usedby = plugin spec
 description = Tags about how well-established and well-working a plugin is.
 
@@ -320,7 +320,6 @@ description = Tags about how well-established and well-working a plugin is.
   When changing some value in the type, you need to copy the information to
   src/libs/tools/src/plugindatabase.cpp
   src/plugins/template/README.md
-
 
 
 [infos/version]
@@ -345,3 +344,30 @@ description = Indicates that this plugin exports a configuration it
   It presents the plugin configuration needed so that
   the plugin works properly. Typically the configuration is not for the
   plugin itself, but for other needed plugins (in infos/needs)
+
+
+[infos/environment]
+type = string
+status = PROPOSED
+usedby = plugin kdb-info
+example = HOME USER
+description = List all environment variables the plugin
+  may access.
+
+  Note: Not listed environment variables do not mean that there
+  are none (the clause is only proposed, not yet implemented).
+  Grep for `getenv` to list all environment variables.
+
+
+[infos/dependencies/_]
+type = string
+status = PROPOSED
+usedby = plugin kdb-info
+example = libyajl-dev
+description = The list of dependencies a plugin has for
+  a specific package management system (like deb, rpm,
+  arch, homebrew, ...).
+
+  Note: Not listed dependencies do not mean that there
+  are none (the clause is only proposed, not yet implemented).
+  See `infos/status` with `nodep` for up-to-date information.
