rest-frontend: links to directories can now use fallbacks to default files

--- a/src/tools/rest-frontend/application-config.json
+++ b/src/tools/rest-frontend/application-config.json
@@ -4,7 +4,8 @@
 	},
 	"website": {
 		"url": "http://localhost:9000/",
-		"content_root": "website/"
+		"content_root": "website/",
+		"target_file_dir_links": ["README.md", "README", "readme.md", "readme"]
 	},
 	"github": {
 		"website": {
