rest-frontend: add BIGPICTURE to website structure

--- a/src/tools/rest-frontend/resources/structure.json.in
+++ b/src/tools/rest-frontend/resources/structure.json.in
@@ -17,6 +17,13 @@
 						}
 					},
 					{
+						"name": "Big Picture",
+						"type": "staticfile",
+						"options": {
+							"path": "doc/BIGPICTURE.md"
+						}
+					},
+					{
 						"name": "Compiling",
 						"type": "staticfile",
 						"options": {
