resolver: mark default

--- a/src/plugins/resolver/CMakeLists.txt
+++ b/src/plugins/resolver/CMakeLists.txt
@@ -25,7 +25,7 @@ foreach (plugin ${PLUGINS})
 			resolver_fm_xp_x
 			resolver_fm_xhp_x
 			resolver_fm_uhb_xb
-			resolver_fm_hpu_b # proposed default
+			resolver_fm_hpu_b # default
 			)
 	endif ()
 endforeach ()
