error: msg to sorry

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -36,7 +36,7 @@ if (DOXYGEN_FOUND)
 			set (WITH_LATEX YES)
 		else (LATEX_COMPILER)
 			set (WITH_LATEX NO)
-			message (WARNING "Latex not found, PDF Manual can't be created.")
+			message (WARNING "Sorry, I cannot create the PDF Manual: I did not find Latex.")
 		endif (LATEX_COMPILER)
 	else (BUILD_PDF)
 		set (WITH_LATEX NO)
@@ -104,7 +104,7 @@ if (DOXYGEN_FOUND)
 		WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
 	)
 else (DOXYGEN_FOUND)
-	message (WARNING "Doxygen not found, Reference Manual can't be created even though requested with BUILD_DOCUMENTATION.")
+	message (WARNING "Sorry, I cannot create the reference manual: I could not find Doxygen")
 endif (DOXYGEN_FOUND)
 
 add_subdirectory(help)
