--- a/tests/shell/include_common.sh.in
+++ b/tests/shell/include_common.sh.in
@@ -85,7 +85,7 @@ exit_if_fail ()
 			echo "fatal: $*"
 			cleanup
 		else
-			echo "fatal (no cleanup): $*"
+			echo "fatal (no cleanup necessary): $*"
 		fi
 		exit 1
 	fi
