lua: fix wrong displayed version
make sure required version will be displayed
see #1071
thanks to @reox

--- a/src/plugins/lua/CMakeLists.txt
+++ b/src/plugins/lua/CMakeLists.txt
@@ -1,5 +1,6 @@
 if (DEPENDENCY_PHASE)
-	find_package(Lua 5.1)
+	set (LUA_REQUIRED_VERSION 5.1)
+	find_package(Lua ${LUA_REQUIRED_VERSION})
 	find_swig()
 
 	if (LUA_FOUND AND SWIG_FOUND)
@@ -13,7 +14,7 @@ if (DEPENDENCY_PHASE)
 		set (SWIG_COMPILE_FLAGS "-Wno-shadow -Wno-old-style-cast -Wno-unused-variable")
 		set_source_files_properties (lua.cpp PROPERTIES COMPILE_FLAGS "${SWIG_COMPILE_FLAGS}")
 	elseif (NOT LUA_FOUND)
-		remove_plugin (lua "Lua libs >= 5.2 not found")
+		remove_plugin (lua "Lua libs >= ${LUA_REQUIRED_VERSION} not found")
 	else ()
 		remove_plugin (lua "swig not found")
 	endif ()
