cmake: fix pkg-config, remove libfind
remove some cmake macros that seem to be copied from somewhere
(and are not used)
fix gsettings project's requirements
fix spelling of PkgConfig

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -39,7 +39,7 @@ if (INSTALL_SYSTEM_FILES)
 	unset (bash-completion_DIR CACHE)
 	if (NOT BASH_COMPLETION_FOUND)
 		find_package (PkgConfig)
-		if (PkgConfig_FOUND)
+		if (PKG_CONFIG_FOUND)
 			pkg_check_modules (BASH_COMPLETION bash-completion QUIET)
 			if (BASH_COMPLETION_FOUND)
 				include (LibFindMacros)
