--- a/src/bindings/gsettings/CMakeLists.txt
+++ b/src/bindings/gsettings/CMakeLists.txt
@@ -1,15 +1,14 @@
-#cmake_minimum_required (VERSION 3.0)
-
 if (CMAKE_MAJOR_VERSION LESS 3)
 	remove_binding (gsettings "Need at least CMake 3.0 for gsettings backend")
 	return ()
 endif ()
 
+cmake_minimum_required (VERSION 3.0)
 project (elektrasettings VERSION 0.1.1 LANGUAGES C)
 
 find_package (PkgConfig)
 
-if (NOT PkgConfig_FOUND)
+if (NOT PKG_CONFIG_FOUND)
 	remove_binding (gsettings "Need PkgConfig needed to find dependencies for gsettings backend")
 	return ()
 endif ()
