cmake: install docu files
add TARGET_DOCUMENTATION_TEXT_FOLDER
install important doc files there
update doc/help/elektra-hierarchy.md
update mount-info
update constants plugin with TARGET_DOCUMENTATION_*

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -107,4 +107,26 @@ else (DOXYGEN_FOUND)
 	message (WARNING "Sorry, I cannot create the reference manual: I could not find Doxygen")
 endif (DOXYGEN_FOUND)
 
+if (INSTALL_DOCUMENTATION)
+	#API.md
+	install (FILES BIGPICTURE.md DESTINATION ${TARGET_DOCUMENTATION_TEXT_FOLDER})
+	#code_of_conduct.md
+	#COMPILE.md
+	install (FILES GOALS.md DESTINATION ${TARGET_DOCUMENTATION_TEXT_FOLDER})
+	install (FILES LICENSE.md DESTINATION ${TARGET_DOCUMENTATION_TEXT_FOLDER})
+	install (FILES METADATA.ini DESTINATION ${TARGET_DOCUMENTATION_TEXT_FOLDER})
+	install (FILES SECURITY.md DESTINATION ${TARGET_DOCUMENTATION_TEXT_FOLDER})
+	#TESTING.md
+	#VERSION.md
+	install (FILES AUTHORS DESTINATION ${TARGET_DOCUMENTATION_TEXT_FOLDER})
+	#CODING.md
+	install (FILES CONTRACT.ini DESTINATION ${TARGET_DOCUMENTATION_TEXT_FOLDER})
+	#DESIGN.md
+	#GIT.md
+	#INSTALL.md
+	install (FILES NEWS.md DESTINATION ${TARGET_DOCUMENTATION_TEXT_FOLDER})
+	install (FILES WHY.md DESTINATION ${TARGET_DOCUMENTATION_TEXT_FOLDER})
+
+endif ()
+
 add_subdirectory(help)
