--- a/src/plugins/constants/constants.c.in
+++ b/src/plugins/constants/constants.c.in
@@ -168,6 +168,10 @@ static void elektraAddConstants (KeySet * ks, Key * parentKey)
 	keySetString (key, "@TARGET_PKGCONFIG_FOLDER@");
 	ksAppendKey (ks, key);
 
+	elektraAddKeyValue (ks, parentKey, "cmake/TARGET_DOCUMENTATION_TEXT_FOLDER", "@TARGET_DOCUMENTATION_TEXT_FOLDER@");
+	elektraAddKeyValue (ks, parentKey, "cmake/TARGET_DOCUMENTATION_HTML_FOLDER", "@TARGET_DOCUMENTATION_HTML_FOLDER@");
+	elektraAddKeyValue (ks, parentKey, "cmake/TARGET_DOCUMENTATION_MAN_FOLDER", "@TARGET_DOCUMENTATION_MAN_FOLDER@");
+	elektraAddKeyValue (ks, parentKey, "cmake/TARGET_DOCUMENTATION_LATEX_FOLDER", "@TARGET_DOCUMENTATION_LATEX_FOLDER@");
 
 	key = keyDup (parentKey);
 	keyAddName (key, "cmake/TARGET_TOOL_EXEC_FOLDER");
@@ -185,7 +189,6 @@ static void elektraAddConstants (KeySet * ks, Key * parentKey)
 	keyAddName (key, "cmake/TARGET_TEMPLATE_FOLDER");
 	keySetString (key, "@TARGET_TEMPLATE_FOLDER@");
 	ksAppendKey (ks, key);
-
 
 	key = keyDup (parentKey);
 	keyAddName (key, "cmake/LIB_SUFFIX");
