Ruby: fix test cases that use capture_output
capture_io was renamed to capture_output. Add an alias if it is missing
to remain backward compatible

--- a/src/bindings/swig/ruby/tests/CMakeLists.txt
+++ b/src/bindings/swig/ruby/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
-file (GLOB TESTS *.rb)
+file (GLOB TESTS testruby_*.rb)
 foreach (file ${TESTS})
 	get_filename_component (name ${file} NAME_WE)
 	add_test (
