--- a/src/bindings/intercept/env/src/CMakeLists.txt
+++ b/src/bindings/intercept/env/src/CMakeLists.txt
@@ -27,3 +27,7 @@ create_lib_symlink (
 		libelektraintercept-env.so
 		libelektragetenv.so
 		)
+create_lib_symlink (
+		libelektraintercept-env.so
+		libelektragetenv.so.0
+		)
