introduce kdbmacros.h with read only error
remove src/include/kdbstat.h (use kdbmacros.h instead)
remove all duplicates where read only checks where done
fix memleaks within read only checker

--- a/src/plugins/constants/constants.c.in
+++ b/src/plugins/constants/constants.c.in
@@ -8,6 +8,7 @@
 
 #include <kdb.h>
 #include <kdbconfig.h>
+#include <kdbmacros.h>
 #include <kdbplugin.h>
 
 #include <string.h>
@@ -360,22 +361,7 @@ int elektraConstantsSet (Plugin * handle ELEKTRA_UNUSED, KeySet * returned, Key 
 {
 	KeySet * info = ksNew (0, KS_END);
 	elektraAddConstants (info, parentKey);
-
-	Key * k;
-	ksRewind (info);
-	ksRewind (returned);
-	while ((k = ksNext (returned)))
-	{
-		Key * c = ksNext (info);
-		if (strcmp (keyName (k), keyName (c)) || strcmp (keyString (k), keyString (c)))
-		{
-			ELEKTRA_SET_ERRORF (84, parentKey, "the key %s (expected %s) was modified to %s (expected %s)", keyName (k),
-					    keyName (c), keyString (k), keyString (c));
-			return -1;
-		}
-	}
-
-	ksDel (info);
+	ELEKTRA_SET_ERROR_READ_ONLY (info, returned, parentKey);
 	return 0;
 }
 
