rest-frontend: cmakelists.txt overhaul
- implement new cmake variable TARGET_TOOL_DATA_FOLDER
- change installation directory of rest-frontend to sub-folder of this folder
- automatically configure Gruntfile.js to know the repository path of the installation

--- a/src/plugins/constants/constants.c.in
+++ b/src/plugins/constants/constants.c.in
@@ -176,6 +176,12 @@ static void elektraAddConstants (KeySet * ks, Key * parentKey)
 
 
 	key = keyDup (parentKey);
+	keyAddName (key, "cmake/TARGET_TOOL_DATA_FOLDER");
+	keySetString (key, "@TARGET_TOOL_DATA_FOLDER@");
+	ksAppendKey (ks, key);
+
+
+	key = keyDup (parentKey);
 	keyAddName (key, "cmake/TARGET_TEST_DATA_FOLDER");
 	keySetString (key, "@TARGET_TEST_DATA_FOLDER@");
 	ksAppendKey (ks, key);
