cmake: make error more friendly

--- a/doc/help/CMakeLists.txt
+++ b/doc/help/CMakeLists.txt
@@ -16,5 +16,5 @@ if (RONN_LOC)
 		generate_manpage (${NAME} SECTION 7)
 	endforeach ()
 else ()
-	message (WARNING "did not find ronn, cannot build man pages even though requested with BUILD_DOCUMENTATION.")
+	message (WARNING "Sorry, I cannot find ronn, thus I cannot build the man pages. Please install https://github.com/rtomayko/ronn.")
 endif ()
