rest-backend: fix and update code comments

--- a/src/tools/rest-backend/config.hpp.in
+++ b/src/tools/rest-backend/config.hpp.in
@@ -93,5 +93,11 @@
 #define ELEKTRA_REST_PERMISSIONS_DELETE_ENTRY 50
 #define ELEKTRA_REST_PERMISSIONS_UPDATE_USER 100
 #define ELEKTRA_REST_PERMISSIONS_DELETE_USER 100
+#define ELEKTRA_REST_PERMISSIONS_RETRIEVE_USER 100
+
+// Settings for user ranks, very self-explanatory
+#define ELEKTRA_REST_USER_MIN_RANK 0
+#define ELEKTRA_REST_USER_MAX_RANK 100
+#define ELEKTRA_REST_USER_DEFAULT_RANK 10
 
 #endif
