rest-backend: move compile-time config to run-time config from elektra
- added function that bootstraps application configuration
    - takes default values where possible
    - prints error messages stating which configuration is missing
- fixed tests and benchmarks (build, configuration, etc)
- all configuration depends now on the start-time of the service / configuration changes require a restart

--- a/src/tools/rest-backend/CMakeLists.txt
+++ b/src/tools/rest-backend/CMakeLists.txt
@@ -13,11 +13,6 @@ elseif (NOT OPENSSL_FOUND)
     remove_tool (${tool} "OpenSSL package not found")
 else ()
 
-    set (REST_AUTH_ENCRYPT_KEY "please_change_to_secret_key" CACHE STRING "Encryption key to be used for auth tokens")
-    set (REST_JWT_ISSUER "additional_secret_issuer" CACHE STRING "The issuer to be used for JWT tokens, should be kept secret")
-    set (REST_REPOSITORY_CONFIGS "dir/configs" CACHE STRING "Path to be used to store configuration snippets")
-    set (REST_REPOSITORY_USERS "dir/users" CACHE STRING "Path to be used to store user information")
-
     set (install_directory ${TARGET_TOOL_DATA_FOLDER}/${tool})
 
     configure_file (
@@ -50,9 +45,13 @@ else ()
     include_directories (${OPENSSL_INCLUDE_DIR})
 
     file (GLOB rest-backend_SRCS *.cpp)
+    file (GLOB main_SRC *main.cpp)
+    list (REMOVE_ITEM rest-backend_SRCS ${main_SRC})
+    message (STATUS "rest-backend sources: ${rest-backend_SRCS}")
 
     add_library (tmp_${tool} OBJECT ${rest-backend_SRCS})
-    add_executable (${tool} $<TARGET_OBJECTS:tmp_${tool}>)
+    add_library (tmp_${tool}_main OBJECT main.cpp)
+    add_executable (${tool} $<TARGET_OBJECTS:tmp_${tool}> $<TARGET_OBJECTS:tmp_${tool}_main>)
     target_link_libraries (${tool} ${CPPCMS_LIBRARY} ${Boost_LIBRARIES} ${LIBJWT_LIBRARY} ${OPENSSL_LIBRARIES})
     target_link_libraries (${tool} elektra-full elektratools)
 
