--- a/src/tools/rest-backend/tests/CMakeLists.txt
+++ b/src/tools/rest-backend/tests/CMakeLists.txt
@@ -12,7 +12,7 @@ add_toolheaders (HDR_FILES)
 file (GLOB TESTS test_*.cpp)
 foreach (file ${TESTS})
     get_filename_component (name ${file} NAME_WE)
-    add_gtest (${name} LINK_TOOLS NO_MAIN SOURCES $<TARGET_OBJECTS:tmp_${tool}>)
+    add_gtest (${name} LINK_TOOLS SOURCES $<TARGET_OBJECTS:tmp_${tool}>)
     target_link_elektra (${name} ${Boost_LIBRARIES})
     target_link_elektra (${name} ${CPPCMS_LIBRARY})
     target_link_elektra (${name} ${LIBJWT_LIBRARY})
