--- a/src/tools/rest-backend/config.hpp.in
+++ b/src/tools/rest-backend/config.hpp.in
@@ -17,33 +17,29 @@
 
 // Base path for the repository used by the rest service to store its data.
 // Path may NOT end with a slash.
-#define ELEKTRA_REST_CONFIG_REPOSITORY_PATH "@REST_REPOSITORY_CONFIGS@"
+#define ELEKTRA_REST_DEFAULT_PATH_CONFIGS "dir/configs"
 
 // Regex that is used to identify an entry in the repository.
 // Each entry has its configuration stored as subkeys, so this regex is
 // necessary to identify the keys that represent entries (and hold meta data).
-#define ELEKTRA_REST_CONFIG_REPOSITORY_ENTRY_SCHEMA "(([a-zA-Z0-9\\-\\.]+)(/([a-zA-Z0-9\\-\\.]+)){3})"
+#define ELEKTRA_REST_ENTRY_SCHEMA_CONFIGS "(([a-zA-Z0-9\\-\\.]+)(/([a-zA-Z0-9\\-\\.]+)){3})"
 
 // Base path for the repository used by the rest service to store user data.
 // The user data is used to authenticate users.
 // Path may NOT end with a sash.
-#define ELEKTRA_REST_USER_REPOSITORY_PATH "@REST_REPOSITORY_USERS@"
+#define ELEKTRA_REST_DEFAULT_PATH_USERS "dir/users"
 
 // Regex that is used to identify an user entry in the repository.
 // Each user entry has its configuration stored as subkeys, so this regex is
 // necessary to identify the keys that represent users (and hold meta data).
-#define ELEKTRA_REST_USER_REPOSITORY_ENTRY_SCHEMA "([a-zA-Z0-9\\-\\.]+)"
-
-// This encryption key is used to encrypt the JWT tokens that are used
-// for authentiction of users
-#define ELEKTRA_REST_AUTHENTICATION_ENCRYPT_KEY "@REST_AUTH_ENCRYPT_KEY@"
+#define ELEKTRA_REST_ENTRY_SCHEMA_USERS "([a-zA-Z0-9\\-\\.]+)"
 
 // The issuer of the JWT tokens. Can be something special, e.g. an
 // application secret.
-#define ELEKTRA_REST_AUTHENTICATION_JWT_ISSUER "@REST_JWT_ISSUER@"
+#define ELEKTRA_REST_AUTHENTICATION_JWT_ISSUER "@tool@"
 
-// The number of seconds after which a JWT token expires
-#define ELEKTRA_REST_AUTHENTICATION_JWT_EXPIRATION_TIME 7200
+// The default expiration time to use in case no dynamic setting is available.
+#define ELEKTRA_REST_DEFAULT_JWT_EXPIRATION_TIME 7200
 
 // Defines a host that may access resources of the REST service
 // can be either a host like "http://frontend.page.com" or the wildcard *
@@ -69,46 +65,68 @@
 #define ELEKTRA_REST_MODEL_USER_META_EMAIL "email"
 #define ELEKTRA_REST_MODEL_USER_META_RANK "rank"
 
+// Default values for outputs
+#define ELEKTRA_REST_DEFAULT_OUTPUT_ENTRY_SORT "asc"
+#define ELEKTRA_REST_DEFAULT_OUTPUT_ENTRY_SORTBY "key"
+#define ELEKTRA_REST_DEFAULT_OUTPUT_ENTRY_FILTERBY "all"
+#define ELEKTRA_REST_DEFAULT_OUTPUT_USER_SORT "asc"
+#define ELEKTRA_REST_DEFAULT_OUTPUT_USER_SORTBY "username"
+#define ELEKTRA_REST_DEFAULT_OUTPUT_USER_FILTERBY "all"
+
 // The max amount of entries the rest service will return for requests
 // that search or list the database. If the user specifies a higher number,
 // it will be overwritten by this one.
 #define ELEKTRA_REST_OUTPUT_MAX_ENTRIES 1000000
 
-// The default sorting for user lists of the rest service.
-// "asc" = ascending (A to Z), "desc" = descending (Z to A)
-#define ELEKTRA_REST_OUTPUT_SORT_USER_DEFAULT "asc"
-
-// The default sorting for entry lists of the rest service.
-// "asc" = ascending (A to Z), "desc" = descending (Z to A)
-#define ELEKTRA_REST_OUTPUT_SORT_ENTRY_DEFAULT "asc"
-
-// The default field to be used for sorting for the user endpoint.
-// For possible options have a look at the API specification.
-#define ELEKTRA_REST_OUTPUT_SORTBY_USER_DEFAULT "username"
-
-// The default field to be used for sorting for the snippets endpoint.
-// For possible options have a look at the API specification.
-#define ELEKTRA_REST_OUTPUT_SORTBY_ENTRY_DEFAULT "key"
-
-// The default to be used for filterby parameters for the user endpoint.
-// For possible options have a look at the API specification.
-#define ELEKTRA_REST_OUTPUT_FILTERBY_USER_DEFAULT "all"
-
-// The default to be used for filterby parameters for the snippets endpoint.
-// For possible options have a look at the API specification.
-#define ELEKTRA_REST_OUTPUT_FILTERBY_ENTRY_DEFAULT "all"
-
-// The user rank that is required to be able to perform certain actions.
-#define ELEKTRA_REST_PERMISSIONS_CREATE_ENTRY 10
-#define ELEKTRA_REST_PERMISSIONS_UPDATE_ENTRY 50
-#define ELEKTRA_REST_PERMISSIONS_DELETE_ENTRY 50
-#define ELEKTRA_REST_PERMISSIONS_UPDATE_USER 100
-#define ELEKTRA_REST_PERMISSIONS_DELETE_USER 100
-#define ELEKTRA_REST_PERMISSIONS_RETRIEVE_USER 100
-
 // Settings for user ranks, very self-explanatory
 #define ELEKTRA_REST_USER_MIN_RANK 0
 #define ELEKTRA_REST_USER_MAX_RANK 100
-#define ELEKTRA_REST_USER_DEFAULT_RANK 10
+
+
+
+#include <cppcms/json.h>
+
+namespace kdbrest
+{
+
+class Config
+{
+
+public:
+	// configuration initializer
+	static int initializeConfiguration (cppcms::json::value & config);
+
+	// JWT settings
+	static std::string jwt_encryption_key;
+	static int jwt_expiration_time;
+
+	// output settings
+	static std::string output_default_entry_sort;
+	static std::string output_default_entry_sortby;
+	static std::string output_default_entry_filterby;
+	static std::string output_default_user_sort;
+	static std::string output_default_user_sortby;
+	static std::string output_default_user_filterby;
+
+	// permissions settings
+	static int permissions_entry_create;
+	static int permissions_entry_edit;
+	static int permissions_entry_delete;
+	static int permissions_user_view;
+	static int permissions_user_edit;
+	static int permissions_user_delete;
+	static int permissions_default_rank;
+
+	// kdb settings
+	static std::string kdb_path_configs;
+	static std::string kdb_path_users;
+
+	// api_specification settings
+	static std::string api_specification_raw;
+	static std::string api_specification_html;
+
+};
+
+}
 
 #endif
