--- a/src/tools/rest-backend/rest-backend-config.json
+++ b/src/tools/rest-backend/rest-backend-config.json
@@ -1,14 +1,55 @@
 {
-	"service": {
-		"api": "http",
-		"port": 8080,
-		"ip": "0.0.0.0"
+	"cppcms": {
+		"service": {
+			"api": "http",
+			"port": 8080,
+			"ip": "0.0.0.0"
+		},
+		"http" : {
+			"script_names": ["/"]
+		}
 	},
-	"http" : {
-		"script_names": ["/"]
-	},
-	"api_specification": {
-		"raw": "https://github.org",
-		"html": "http://git.libelektra.org"
+	"backend": {
+		"api_specification": {
+			"raw": "https://github.org",
+			"html": "http://git.libelektra.org"
+		},
+		"jwt": {
+			"encryption_key": "s0m3th1ng_r4nd0m",
+			"expiration_time": 7200
+		},
+		"kdb": {
+			"path": {
+				"users": "dir/users",
+				"configs": "dir/configs"
+			}
+		},
+		"output": {
+			"default": {
+				"entry": {
+					"sort": "asc",
+					"sortby": "key",
+					"filterby": "all"
+				},
+				"user": {
+					"sort": "asc",
+					"sortby": "username",
+					"filterby": "all"
+				}
+			}
+		},
+		"permissions": {
+			"entry": {
+				"create": 10,
+				"edit": 50,
+				"delete": 50
+			},
+			"user": {
+				"view": 100,
+				"edit": 100,
+				"delete": 100
+			},
+			"default_rank": 10
+		}
 	}
 }
