rest-frontend: make slogan adjective rotation interval configurable

--- a/src/tools/rest-frontend/application-config.json
+++ b/src/tools/rest-frontend/application-config.json
@@ -5,7 +5,10 @@
 	"website": {
 		"url": "http://localhost:9000/",
 		"content_root": "website/",
-		"target_file_dir_links": ["README.md", "README", "readme.md", "readme"]
+		"target_file_dir_links": ["README.md", "README", "readme.md", "readme"],
+		"slogan": {
+			"rotation_interval": 2500
+		}
 	},
 	"github": {
 		"website": {
