rest-backend: add const wherever possible

--- a/src/tools/rest-backend/config.hpp.in
+++ b/src/tools/rest-backend/config.hpp.in
@@ -125,6 +125,11 @@ public:
 	static std::string api_specification_raw;
 	static std::string api_specification_html;
 
+private:
+	Config()
+	{
+	}
+
 };
 
 }
