rest-backend: code improvements
- use logger when retrieving version from kdb fails
- use lambda function to retrieve single parts of version
- return bool from initializeConfiguration()
- remove magic constant

--- a/src/tools/rest-backend/config.hpp.in
+++ b/src/tools/rest-backend/config.hpp.in
@@ -94,7 +94,7 @@ class Config
 
 public:
 	// configuration initializer
-	static int initializeConfiguration (cppcms::json::value & config);
+	static bool initializeConfiguration (const cppcms::json::value & config);
 
 	// JWT settings
 	static std::string jwt_encryption_key;
