rest-frontend: remove tool if npm not found + do not build sitemap during installation

--- a/src/tools/rest-frontend/package.json
+++ b/src/tools/rest-frontend/package.json
@@ -55,7 +55,7 @@
         "xmlbuilder": "^8.2.2"
     },
     "scripts": {
-        "postinstall": "./node_modules/grunt-cli/bin/grunt full"
+        "postinstall": "./node_modules/grunt-cli/bin/grunt install"
     },
     "config": {
         "unsafe-perm": true
